# EDA_Project

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: ConfigGBench.cmake  ConfigGTest.cmake
spatial/: BigRTree.hpp  CMakeLists.txt  MBR.hpp  NodeBase.hpp  NodeIntern.hpp  NodeLeaf.hpp  Point.hpp  RTree.hpp  Tester.hpp  Trip.hpp
tests/: CMakeLists.txt  postGIS_tests.sql  postgreSQL_tests.sql  pythonRTree_tests.ipynb  validation_test.cpp
tests/RTree/: index.rtree  test.csv  test2.csv  testfew.csv
